fix(post): left-align post header title and metadata

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -512,6 +512,8 @@ hr {
 }
 
 .post-header {
+  text-align: left;
+
   .post-title {
     color: var(--text-heading);
     font-weight: 700;
